--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,20 @@
 
 $lightGray: #444;
 $grayMediumLight: #eaeaea;
+
+.users {
+	list-style: none;
+  	margin: 0;
+ 	li {
+		overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $lightGray;
+    &:last-child {
+      border-bottom: 1px solid $lightGray;
+    }
+	}
+}
+
 @mixin box_sizing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
