--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
               <li><%= link_to "Home",     root_path %></li>
               <li><%= link_to "Help",     help_path %></li>
 				  <% if signed_in? %>
-				  	<li><%= link_to "Users", '#' %></li>
+				  	<li><%= link_to "Users", users_path %></li>
               	<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 Account <span class="caret"></span>
               	</a>
