--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,31 @@
 $lightGray: #444;
 $grayMediumLight: #eaeaea;
 
+.microposts {
+  list-style: none;
+  margin: 10px 0 0 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+	} 
+}
+.content {
+  display: block;
+}
+
+.timestamp {
+  color: $lightGray;
+}
+.gravatar {
+float: left;
+  margin-right: 10px;
+}
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
 .users {
 	list-style: none;
   	margin: 0;
