--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,22 @@
-<div class="center hero-unit">
-  <h1>Share your questions and answers</h1>
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
+<% if signed_in? %>
+	<div class="row">
+		<aside class="span4">
+			<section>
+				<%= render 'shared/user_info' %>
+			</section>
+			<section>
+				<%= render 'shared/article_form' %>
+			</section>
+		</aside>
+		<div class="span8">
+			<h3>Articles Feed</h3>
+			<%= render 'shared/feed' %>
+		</div>
+	</div>
+<% else %>
+	<div class="center hero-unit">
+	<h1> Share your questions and answers </h1>
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+	</div>
 <%= link_to image_tag("logo.jpeg", alt: "Q-master") %>
+<% end %>
