Add Question structure

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
    </aside>
 	<div class="span8">
 	<% if @user.articles.any? %>
-      <h3>Articles (<%= @user.articles.count %>)</h3>
+      <h3>Answers I post</h3>
       <ol class="articles">
         <%= render @articles %>
       </ol>
