--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,11 +1,12 @@
 <li>
-  <span class="content"><%= article.text %></span>
+  <span class="content">
+  <%= article.text %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(article.created_at) %> ago.
   </span>
   <% if current_user?(article.user) %>
     <%= link_to "delete", article, method: :delete,
 	 											 data: { confirm: "You sure?" },
-												 title: article.title %>
+												 title: article.text %>
   <% end %>
 </li>
