--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,9 +7,10 @@
               <li><%= link_to "Home",     root_path %></li>
               <li><%= link_to "Help",     help_path %></li>
 				  <% if signed_in? %>
-				  	<li><%= link_to "Users", users_path %></li>
-              	<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                Account <span class="caret"></span>
+				  		<li><%= link_to "Users", users_path %></li>
+					<li id="fat-menu" class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+						Account <b class="caret"></b>
               	</a>
               	<ul class="dropdown-menu">
                 <li><%= link_to "Profile",  current_user %></li>
