--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
 			</section>
 		</aside>
 		<div class="span8">
-			<h3>Articles Feed</h3>
+			<h3>Questions I have asked</h3>
 			<%= render 'shared/feed' %>
 		</div>
 	</div>
