--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
         <div class="container">
           <%= link_to "Q-master", root_path, id: "logo" %>
           <nav>
-            <ul class="nav pull-right">
+            <ul class="nav navbar-nav">
               <li><%= link_to "Home",     root_path %></li>
               <li><%= link_to "Help",     help_path %></li>
 				  <% if signed_in? %>
