--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%provide(:title, @user.name) %>
+<div class="row">
+   <aside class = "span4">
+      <section>
+         <h1>
+            <%= gravatar_for @user %>
+            <%= @user.name %>
+         </h1>
+      </section>
+   </aside>
+	<div class="span8">
+	<section>
+		<%= render 'shared/article_form' %>
+	</section>
+	<% if @user.articles.any? %>
+      <h3>Answers I post</h3>
+      <ol class="articles">
+        <%= render @articles %>
+      </ol>
+      <%= will_paginate @articles %>
+    <% end %>
+	</div>
+</div>
