--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,17 +1,16 @@
 body {
   background-color: #fff;
   color: #333;
+  margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
-  margin: 33px;
 }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
-  margin: 33px;
 }
 
 pre {
@@ -24,11 +23,12 @@ a {
   color: #000;
 
   &:visited {
-    color: #666;
+    color: #fff;
+    //font-size: 30px;
   }
 
   &:hover {
-    color: #fff;
+    color: #000;
     background-color: #000;
   }
 }
@@ -38,9 +38,7 @@ th {
 }
 
 td {
-  padding-bottom: 7px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 0 5px 7px;
 }
 
 div {
@@ -62,8 +60,7 @@ div {
 #error_explanation {
   width: 450px;
   border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
+  padding: 7px 7px 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
 
@@ -72,8 +69,7 @@ div {
     font-weight: bold;
     padding: 5px 5px 5px 15px;
     font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0;
+    margin: -7px -7px 0;
     background-color: #c00;
     color: #fff;
   }
