--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
             <ul class="nav navbar-nav">
               <li><%= link_to "Home",     root_path %></li>
               <li><%= link_to "Help",     help_path %></li>
+				  <li><%= link_to "Questions",questions_path %></li>
 				  <% if signed_in? %>
 				  		<li><%= link_to "Users", users_path %></li>
 					<li id="fat-menu" class="dropdown">
