--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,29 +1,23 @@
-<p id="notice"><%= notice %></p>
+<% provide(:titile, 'Questions') %>
+<h1>All Questions</h1>
 
-<h1>Questions</h1>
+<%= will_paginate %>
+<ul class="users">
+	<table>
+		<thead>
+			<tr>
+				<th>Content</th>
+      		<th>User</th>      		
+				<th colspan="7"></th>
+				<th>Time</th>
+    		</tr>
+  		</thead>
+		<tbody>
+   		<%=  render @questions %>
+		</tbody>
+	</table>
+</ul>
 
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= will_paginate %>
 
-  <tbody>
-    <% @questions.each do |question| %>
-      <tr>
-        <td><%= question.content %></td>
-        <td><%= question.user_id %></td>
-        <td><%= link_to 'Show', question %></td>
-        <td><%= link_to 'Edit', edit_question_path(question) %></td>
-        <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New Question', new_question_path %>
