--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
    </aside>
 	<div class="span8">
 	<section>
-		<%= render 'shared/article_form' %>
+		<%= render 'shared/question_form' %>
 	</section>
 	<% if @user.questions.any? %>
 		<h3> Questions I have asked</h3>
