--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -127,7 +127,7 @@ footer {
   line-height: 2;
   &:hover {
     color: #fff;
-    ext-decoration: none;
+    text-decoration: none;
   }
 }
 aside {
