--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="navbar-inner">
+      <div align="left" class="navbar-inner">
         <div class="container">
           <%= link_to "Q-master", root_path, id: "logo" %>
           <nav>
