--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,7 +9,7 @@ $grayMediumLight: #eaeaea;
   li {
     padding: 10px 0;
     border-top: 1px solid #e8e8e8;
-	} 
+	}
 }
 .content {
   display: block;
@@ -35,8 +35,10 @@ aside {
 		overflow: auto;
     padding: 10px 0;
     border-top: 1px solid $lightGray;
+    border-top: 1px;
     &:last-child {
-      border-bottom: 1px solid $lightGray;
+      border-bottom: 1px;
+      border-bottom: 2px solid $lightGray;
     }
 	}
 }
@@ -44,7 +46,15 @@ aside {
 @mixin box_sizing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
+
   box-sizing: border-box;
+  width: 400px;
+  //height: 100px;
+  //padding: 30px;
+
+
+
+  //width: 80px;
 }
 
 #error_explanation {
@@ -58,9 +68,13 @@ aside {
 
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
-  width: 100%;
+  width:  100%;
   padding: 10px;
   margin-bottom: 15px;
+  text-align: center;
+  vertical-align: middle;
+
+  //color: #000000;
   @include box_sizing;
 }
 input {
@@ -78,11 +92,12 @@ footer {
   margin-top: 100px;
   padding-top: 50px;
   border-top: 1px solid #eaeaea;
-  color: $lightGray;
+  //color: $lightGray;
+  color: #fff;
   a{
-    color: #555;
+    color: #fff;
      &:hover {
-    color: #222;
+    color: #fff;
    }
   }
   small {
@@ -99,15 +114,17 @@ footer {
 }
 
 #logo {
-  float: left;
+  float: center;
   margin-right: 10px;
-  font-size: 1.7em;
+  font-size: 1.2em;
   color: #fff;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 9px;
+  padding-top: 50px;
+  padding-left: 15px;
+  margin-top: 30px;
   font-weight: bold;
-  line-height: 1;
+  line-height: 2;
   &:hover {
     color: #fff;
     text-decoration: none;
@@ -118,7 +135,7 @@ aside {
     padding: 10px 0;
     border-top: 1px solid $lightGray;
     &:first-child {
-border: 0;
+      border: 0;
       padding-top: 0;
     }
     span {
@@ -132,7 +149,7 @@ h1 {
       letter-spacing: -1px;
       margin-bottom: 3px;
       margin-top: 0px;
-	} 	
+	}
  }
 }
 .gravatar {
@@ -157,6 +174,7 @@ h2 {
   text-align: center;
   font-weight: normal;
   color: $lightGray;
+  //color: #fff;
 }
 
 p {
@@ -169,7 +187,7 @@ html {
 }
 
 body {
-  padding-top: 400px;
+  padding-top: 100px;
 }
 
 section {
@@ -178,6 +196,7 @@ section {
 
 textarea {
   resize: vertical;
+  color: #000;
 }
 
 .center {
