Followers and followeds

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,10 @@
 				<%= render 'shared/user_info' %>
 			</section>
 			<section>
-				<%= render 'shared/article_form' %>
+				<%= render 'shared/stats' %>
+			</section>
+			<section>
+				<%= render 'shared/question_form' %>
 			</section>
 		</aside>
 		<div class="span8">
