--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,5 +1,5 @@
 <li id="<%= feed_item.id %>">
-  <span class="content"><%= feed_item.text %></span>
+  <span class="content"><%= feed_item.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
   </span>
