--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -7,5 +7,5 @@
   <%= link_to "view my profile", current_user %>
 </span>
 <span>
-  <%= pluralize(current_user.articles.count, "article") %>
+  <%= pluralize(current_user.questions.count, "question") %>
 </span>
