--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,12 @@
             <%= @user.name %>
          </h1>
       </section>
+		<section>
+			<%= render 'shared/stats' %>
+		</section>
    </aside>
 	<div class="span8">
+		<%= render 'follow_form' if signed_in? %>
 	<section>
 		<%= render 'shared/question_form' %>
 	</section>
