Search bar in users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,14 @@
 <% provide(:titile, 'All users') %>
 <h1>All People in Community</h1>
 
-<%= will_paginate %>
+<%= search_form_for @q do |f| %>
+	<%= f.label :name_cont %>
+  	<%= f.search_field :name_cont %>
+	<%= f.submit %>
+<% end %>
+
+<%= sort_link(@q, :name) %>
+
 <ul class="users">
     <%=  render @users %>
 </ul>
