--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,6 +16,9 @@
 			<h3>Questions I have asked</h3>
 			<%= render 'shared/feed' %>
 		</div>
+		<div class="span8">
+			<h3>Answers I have posted</h3>
+		</div>
 	</div>
 <% else %>
 <html>
