--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -22,4 +22,9 @@
     <%= form.submit %>
   </p>
 
+   <div class="picture">
+    <%= form.label :picture %><br>
+    <%= form.file_field :picture %>
+  </div>
+
 <% end %>
