--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,7 +7,7 @@ body {
     //font-weight: lighter;
     background-image: url("cover.jpg");
     z-index: -1;
-    color: white;
+    color: black;
     width: 100%;
     height: 100%;
     text-align: center;
