--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -5,7 +5,7 @@
 body {
     font-family: "Microsoft Yahei", sans-serif;
     //font-weight: lighter;
-    background-image: url("/cover.jpg");
+    background-image: image_url("/public/cover.jpg");
     z-index: -1;
     color: black;
     width: 100%;
