--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <h1>
+  <strong>Title:</strong>
+  <%= @question.title %>
+</h1>
+<h1>
   <strong>Content:</strong>
   <%= @question.content %>
 </h1>
