--- a/app/views/shared/_question_form.html.erb
+++ b/app/views/shared/_question_form.html.erb
@@ -1,5 +1,8 @@
 <%= form_for(@question) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
+   <div class="field" align="left">
+    <%= f.text_area :title, placeholder: "Question title here" %>
+  </div>	 
   <div class="field" align="left">
     <%= f.text_area :content, placeholder: "Ask a new question..." %>
   </div>	
