--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -37,7 +37,7 @@
 			<%= render article.comments %>
 		<% end %>
 	<% end %>
-	<% will_paginate @articles %>
+	<%= will_paginate @articles %>
 <% end %>
 </div>
 
