--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,7 +15,7 @@
 <div align="left">
 <h2>Answers</h2>
 <% if @question.articles.any? %>
-	<% @question.articles.each do |article| %>
+	<% @articles.each do |article| %>
 		<%= render article %>
 		<%= link_to like_article_path(article), class: "like-btn", method: :put, remote: :true, 
 		 data: {id: article.id} do %>
@@ -37,6 +37,7 @@
 			<%= render article.comments %>
 		<% end %>
 	<% end %>
+	<%= will_paginate @articles %>
 <% end %>
 </div>
 
