after adding cache function

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,7 +7,7 @@
 	<%= f.submit %>
 <% end %>
 
-<%-# cache(cache_key_for_question_table) do -%>
+<% cache(cache_key_for_question_table) do %>
 
 <ul class="users">
 	<table>
@@ -33,4 +33,4 @@
 </ul>
 
 
-<%-# end -%>
+<% end %>
